# LLM_Task_Runner

./: README.md  main.py  pyproject.toml
configs/: load.py  models.yaml
data/: samples.json
eval/: dataset.py  evaluate.py  metrics.py
runner/: executor.py  logger.py  retry.py  schema.py
tasks/: base.py  classify.py
